--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,10 @@ pool:
   vmImage: 'ubuntu-latest'
   
 steps:
-- task: PublishTestResults@2
-  inputs:
-    testResultsFormat: 'JUnit'
-    testResultsFiles: 'unit-test-results.trx'
+  - task: PublishTestResults@2
+    displayName: 'Publish test results'
+    condition: always()
+    inputs:
+      testResultsFormat: VSTest
+      testResultsFiles: 'unit-test-results.trx'
 
